Fix #113182: Crash when animating Viewport visibility of Curves / GPv3 object

This is actually a deeper issue, which roots to the fact that updating
relations of the dependency graph does not properly handle cases when an
operation was previously skipped from evaluation (i.e. as a visibility
optimization).

The fix is to preserve needs-update flag throughout relations update of
a dependency graph, similar to the entry tags.

Pull Request: https://projects.blender.org/blender/blender/pulls/120477